# boids

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ci  README.md  boid.cpp  boid.h  boids.toml  main.cpp  pyproject.toml  renovate.json  test_boid.cpp  test_main.cpp
.github/workflows/: build-container.yml  cmake-multi-platform.yml  cpp-linter.yml  prepare-dependencies.yml
cmake/: Config.cmake  Coverage.cmake  Dependencies.cmake
scripts/: format.sh  tidy.sh
src/: CMakeLists.txt  boid.h  main.cpp
src/cli/: CMakeLists.txt  main.cpp  ncurses_output.cpp  ncurses_output.h  run.cpp  run.h  runner.cpp  runner.h
src/cli/cmake/: Dependencies.cmake
src/common/: CMakeLists.txt  boid.cpp  output_handler.h
src/common/include/: boid.h
tests/: CMakeLists.txt  test_boid.cpp  test_main.cpp
tests/cli/: CMakeLists.txt  test_run.cpp  test_runner.cpp
tests/cmake/: Dependencies.cmake
tests/common/: CMakeLists.txt  test_boid.cpp
